<?xml version="1.0"?>
<package>
  <name>amigo_head_ref</name>
  <version>0.0.0</version>
  <description>The amigo_head_ref package</description>

  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
